feat: added usage of query specification for searching settlements, updated connected services and controllers, added necessary dto